--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,19 +1,26 @@
 FROM trevorj/ubuntu:trusty
 MAINTAINER Trevor Joynson "docker@skywww.net"
 
-# Add in files
-ADD ./files /opt/salty-docker
-
-# Install salt-minion
-RUN apt-get update -qq \
-    && apt-get install -qqy software-properties-common \
-    && add-apt-repository ppa:saltstack/salt \
-    && apt-get update -qq \
-    && apt-get install -qqy python-apt salt-minion \
+RUN echo "Installing wget" \
+    && apt-get update -q \
+    && apt-get install -qy wget \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && :
 
-# Add in entrypoint
-ENV MINION_ID salty-docker
+RUN echo "Backwards compat" \
+    && mkdir -p /opt/salty-docker \
+    && ln -s /sbin/{set-minion-id,exec-as-id} /opt/salty-docker/ \
+    && :
 
-ENTRYPOINT ["/opt/salty-docker/entrypoint"]
+# Install salt-minion
+RUN echo "Installing salt-minion" \
+    && repo="http://repo.saltstack.com/apt/ubuntu/ubuntu14/latest" \
+    && wget -qO - "$repo/SALTSTACK-GPG-KEY.pub" | apt-key add - \
+    && echo "deb $repo $(lsb_release -cs) main" >> /etc/apt/sources.list.d/saltstack-official.list \
+    && apt-get update -q \
+    && apt-get install -qy python-apt salt-minion \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+    && : \
+
+# Add in files
+ADD sbin /sbin/
