--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:yakkety
+FROM ubuntu:trusty
 MAINTAINER Trevor Joynson <docker@trevor.joynson.io>
 
 ADD common/bin /usr/local/bin/
@@ -12,10 +12,10 @@ RUN set -exv \
 #ARG SALT_APT_RELEASE="latest"
 
 # Latest Salt for Ubu release
-ARG SALT_APT_RELEASE="16.10/amd64/latest"
+ARG SALT_APT_RELEASE="14.04/amd64/latest"
 
 # Specific Salt release
-#ARG SALT_APT_RELEASE="16.04/amd64/2016.3"
+#ARG SALT_APT_RELEASE="14.04/amd64/2016.3"
 
 # Build repo URL
 ARG SALT_APT_REPO="http://repo.saltstack.com/apt/ubuntu/${SALT_APT_RELEASE}"
