--- a/circle.yml
+++ b/circle.yml
@@ -23,6 +23,7 @@ deployment:
     owner: akatrevorjay
     commands:
       - make push
+      - make push DOCKER_REPO=ubuntu-salt-minion
 
   #release:
   #  tag: /v[0-9]+(\.[0-9]+)*/
