--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           command: |
             set -eo pipefail
             set -xv
-            export ${!CIRCLE*}
+            export ${!*}
             make -j8
 
       #- run:
@@ -31,7 +31,7 @@ jobs:
       #    command: |
       #      set -eo pipefail
       #      set -xv
-      #      export ${!CIRCLE*}
+      #      export ${!*}
       #      make test
 
       - deploy:
@@ -43,7 +43,7 @@ jobs:
           command: |
             set -eo pipefail
             set -xv
-            export ${!CIRCLE*}
+            export ${!*}
             case "$CIRCLE_BRANCH" in
                 master)
                   make -j8 push
