--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,6 @@ jobs:
           name: checkout-submodules
           command: |
             set -eo pipefail
-            set -xv
             git submodule sync
             git submodule update --init
 
@@ -22,31 +21,24 @@ jobs:
           name: build
           command: |
             set -eo pipefail
-            set -xv
-            export ${!*}
-            make -j10
+            exec make -j8
 
-      #- run:
-      #    name: test
-      #    command: |
-      #      set -eo pipefail
-      #      set -xv
-      #      export ${!*}
-      #      make test
+      - run:
+          name: test
+          command: |
+            set -eo pipefail
+            exec make test
 
       - deploy:
           name: docker-login
-          command: docker login -e "$DOCKER_EMAIL" -u "$DOCKER_USER" -p "$DOCKER_PASS"
+          command: |
+            exec docker login -e "$DOCKER_EMAIL" -u "$DOCKER_USER" -p "$DOCKER_PASS"
 
       - deploy:
           name: push
           command: |
             set -eo pipefail
-            set -xv
-            export ${!*}
             case "$CIRCLE_BRANCH" in
                 master)
-                  make -j10 push
-                  make -j10 push DOCKER_REPO=ubuntu-salt-minion
-                  ;;
+                  exec make -j8 push ;;
             esac
