--- a/Makefile.docker
+++ b/Makefile.docker
@@ -11,7 +11,7 @@ REPO ?= ${DOCKER_USER}/${DOCKER_REPO}
 # latest == LTS
 # rolling == Latest release
 # devel == Latest development release
-UBUNTU_TAGS := latest rolling devel artful zesty yakkety xenial trusty
+UBUNTU_TAGS := latest rolling devel bionic artful zesty yakkety xenial trusty
 TAGS ?= $(UBUNTU_TAGS)
 
 BUILD_TAG_PREFIX ?= build-
@@ -30,8 +30,13 @@ HOST_GOLANG_DEPS += ${HOST_BIN}/prefixout
 HOST_DEPS += ${HOST_GOLANG_DEPS}
 
 HOST_GOLANG_IMAGE = golang:1.8
-HOST_GOLANG_IMAGE_CMD = docker run --userns host --rm -v $(abspath ${HOST_BIN}):/go/bin ${HOST_GOLANG_IMAGE}
-HOST_GOLANG_BUILD_CMD = ${HOST_GOLANG_IMAGE_CMD} go get -u -v $(REPO_$@)
+HOST_GOLANG_BUILD_CMD ?= \
+	docker create -v /go/bin --name host-golang-build-out-$(notdir $@) busybox:latest /bin/true \
+	&& ( \
+	  docker run --rm --volumes-from host-golang-build-out-$(notdir $@) ${HOST_GOLANG_IMAGE} go get -u -v $(REPO_$@) \
+	  && docker cp host-golang-build-out-$(notdir $@):/go/bin/$(notdir $@) $(abspath ${HOST_BIN}) \
+	); \
+	docker rm host-golang-build-out-$(notdir $@)
 
 ${HOST_GOLANG_DEPS}:
 	${HOST_GOLANG_BUILD_CMD}
@@ -94,7 +99,7 @@ BUILD_ARGS ?=
 
 $(TAGS): Dockerfile deps
 	-echo -- $@: REPO=${REPO} TAG=${TAG} BUILD_TAG=${BUILD_TAG_PREFIX}$@ >&2
-	${HOST_BIN}/prefixout -dtc --prefix "[$@] " -- \
+	"${HOST_BIN}/prefixout" -dtc --prefix "[$@] " -- \
 	  docker build \
 	  ${BUILD_ARGS} \
 	  -t "${REPO}:${BUILD_TAG_PREFIX}$@" \
