--- a/Makefile.docker
+++ b/Makefile.docker
@@ -11,7 +11,7 @@ REPO ?= ${DOCKER_USER}/${DOCKER_REPO}
 # latest == LTS
 # rolling == Latest release
 # devel == Latest development release
-UBUNTU_TAGS := latest rolling bionic xenial
+UBUNTU_TAGS := latest bionic xenial
 TAGS ?= $(UBUNTU_TAGS)
 
 BUILD_TAG_PREFIX ?= build-
